--- a/soft_socpr.html
+++ b/soft_socpr.html
@@ -136,7 +136,7 @@
                                         <li>Как правильно оформить проектную заявку на грантовый конкурс</li>
                                         <li>Как составить отчета по реализации проекта</li>
                                     </ul> <br><br>
-                                Участники на собственном примере проработают проектную идею, упакуют ее в проект и оформят проектную заявку на грантовый конкурс, а так же научатся правильно презентовать свой проект</h4>
+                                Участники на собственном примере проработают проектную идею, упакуют ее в проект и оформят проектную заявку на грантовый конкурс, а также научатся правильно презентовать свой проект</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -169,7 +169,7 @@
                      </div>
                      <div class="row">  
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Чем полезно участие в программе/ обучение на курсе</h2>
+                            <h2 class="wow fadeInUp">Чем полезно участие в программе / обучение на курсе</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
 
@@ -188,7 +188,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Устинова Н.П. , к. пед. наук , доцент кафедры «ИГППиТР»</h4>
+                                <h4>Н.П. Устинова , канд. пед. наук, доцент кафедры «ИГППиТР»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
