--- a/soft_engdel.html
+++ b/soft_engdel.html
@@ -121,7 +121,7 @@
                             <p class="lead wow fadeInUp">
                                 <h4>В программе представлены  следующие темы для изучения:
                                     <ul>
-                                        <li>устная и письменная коммуникация в типичных ситуациях делового общения: установление контактов, в аэропорту, командировки, обмен профессиональным опытом с зарубежными партнерами, деловая корреспонденция, правила общения в профессиональной международной среде, участие в зарубежных выставках</li>
+                                        <li>устная и письменная коммуникации в типичных ситуациях делового общения: установление контактов в аэропорту, командировки, обмен профессиональным опытом с зарубежными партнерами, деловая корреспонденция, правила общения в профессиональной международной среде, участие в зарубежных выставках</li>
                                         <li>грамматика и фонетика современного английского языка</li>
                                         <li>навыки эффективной презентации</li>
                                     </ul> <br><br>
@@ -130,7 +130,7 @@
                                     <li>использование современных методик и лучших практик зарубежной школы обучения иностранным языкам</li>
                                     <li>работа с учебно-методическим комплексом Оксфордского и Кембриджского университетов</li>
                                     <li>привлекательный формат занятий: практические занятия в форме разговорного английского клуба, круглых столов, мастер-классов</li>
-                                    <li>встречи с иностранными специалистами, «живое» общение в интернациональной среде</li>
+                                    <li>встречи с иностранными специалистами, живое общение в интернациональной среде</li>
                                     <li>интерактивные занятия в ЭИОС «Moodle» ИжГТУ, онлайн-тестирование, вебинары</li>
                                 </ul>
                             </h4>
@@ -172,7 +172,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Благодаря данным курсам слушатели приобретут необходимые навыки общения в международной среде, как на бытовом, так и на профессиональном уровне. Проведение занятий в коммуникативном формате, нацеленность на успех, индивидуальный подход к каждому обучающемуся, создание благоприятного психологической  атмосферы — все это поможет снять языковой и психологический  барьеры в общении на иностранном языке.</h4>
+                                <h4>Благодаря данным курсам слушатели приобретут необходимые навыки общения в международной среде как на бытовом, так и на профессиональном уровне. Проведение занятий в коммуникативном формате, нацеленность на успех, индивидуальный подход к каждому обучающемуся, создание благоприятной психологической  атмосферы — все это поможет снять языковой и психологический  барьеры в общении на иностранном языке.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
