--- a/soft_engit.html
+++ b/soft_engit.html
@@ -172,7 +172,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Благодаря данным курсам слушатели приобретут необходимые навыки устного и письменного межкультурного общения  на профессиональном уровне. Участие иностранных специалистов в учебном процессе предоставит слушателям возможность практики «живого» общения  в интернациональной среде и установлению партнерских отношений с зарубежными организациями, реализации совместных научных, профессиональных и образовательных проектов</h4>
+                                <h4>Благодаря данным курсам слушатели приобретут необходимые навыки устного и письменного межкультурного общения  на профессиональном уровне. Участие иностранных специалистов в учебном процессе предоставит слушателям возможность практики живого общения  в интернациональной среде и установления партнерских отношений с зарубежными организациями, реализации совместных научных, профессиональных и образовательных проектов</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -185,7 +185,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>зав. кафедрой «Английский язык», доцент, канд.пед.наук Архипова Елена Игоревна</h4>
+                                <h4>Архипова Елена Игоревна, канд.пед.наук, доцент, зав. кафедрой «Английский язык» </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
