--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                                                                 <h4>Повышение квалификации</h4>
                                                             </div>
                                                             <div class="sc-info">
-                                                                <h3>Английский язык для работников IT-сферы (базовый/повышенный уровень)</h3>
+                                                                <h3>Английский язык для работников ИТ-сферы (базовый/повышенный уровень)</h3>
                                                             </div>
                                                             <div class="sc-more mr10">
                                                               
