--- a/soft_engvia.html
+++ b/soft_engvia.html
@@ -150,14 +150,14 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Курс предназначен для магистрантов и аспирантов разных направлений и профилей профессиональной подготовки (в частности, УГСН 090000 Информатика и вычислительная техника, 110000 Электроника, радиотехника и системы связи, 450000 Языкознание и литературоведение), для научно-педагогических и инженерно-технических и др. категорий работников, занимающимися научно-исследовательской деятельностью и желающих повысить свою квалификацию в области английского языка для специальных целей.</h4>
+                                <h4>Курс предназначен для магистрантов и аспирантов разных направлений и профилей профессиональной подготовки (в частности, УГСН 090000 Информатика и вычислительная техника, 110000 Электроника, радиотехника и системы связи, 450000 Языкознание и литературоведение), для научно-педагогических, инженерно-технических и др. категорий работников, занимающихся научно-исследовательской деятельностью и желающих повысить свою квалификацию в области английского языка для специальных целей.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
                      </div>
                      <div class="row">  
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Чем полезно участие в программе/ обучение на курсе</h2>
+                            <h2 class="wow fadeInUp">Чем полезно участие в программе / обучение на курсе</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
 
@@ -166,8 +166,8 @@
                                 <h4>После освоения курса слушатель будет способен: 
                                     <ul>
                                         <li>применять современные коммуникативные технологии, в том числе на иностранном(ых) языке(ах), для академического и профессионального взаимодействия</li>
-                                        <li>успешно вести научно-образовательную устную и письменную коммуникацию на английском языке включая участие в конференциях, выставках, международных стажировках</li>
-                                        <li>создавать научные тексты на английском языке разного объема и характера, такие, как статья, резюме, рецензия, заявка и др.</li>
+                                        <li>успешно вести научно-образовательную устную и письменную коммуникации на английском языке включая участие в конференциях, выставках, международных стажировках</li>
+                                        <li>создавать научные тексты на английском языке разного объема и характера, такие как статья, резюме, рецензия, заявка и др.</li>
                                         <li>аргументированно анализировать англоязычные оригинальные тексты по различным направлениям научного исследования</li>
                                         <li>принимать участие в совершенствовании учебно-методического  обеспечения соответствующих дисциплин</li>
                                     </ul>
@@ -184,9 +184,9 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.п.н, доцент, заведующий кафедрой "Английский язык"  Архипова Е.И. <br>
-                                    д.филол.н., доцент, профессор кафедры "Английский язык" Ерохин А.В., к.филол.н <br>
-                                    старший преподаватель кафедры "Английский язык" Мензаирова Е.А. 
+                                <h4>Архипова Е.И., к.п.н, доцент, заведующий кафедрой "Английский язык"  <br>
+                                    Ерохин А.В., д.ф.н., доцент, профессор кафедры "Английский язык"  <br>
+                                    Мензаирова Е.А., к.ф.н, старший преподаватель кафедры "Английский язык"  
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
