--- a/soft_profkom.html
+++ b/soft_profkom.html
@@ -121,13 +121,13 @@
                             <p class="lead wow fadeInUp">
                                 <h4>В программе представлена методология пошагового построения учебного процесса . В процессе работы слушатели обретают следующие  навыки и умения:
                                     <ul>
-                                        <li>Письменная и устная коммуникация на родном языке</li>
-                                        <li>Навыки межличностных отношений</li>
-                                        <li>Способность работать в международной среде</li>
+                                        <li>письменная и устная коммуникация на родном языке</li>
+                                        <li>навыки межличностных отношений</li>
+                                        <li>способность работать в международной среде</li>
                                         <li>методику научно-технического перевода</li>
-                                        <li>терминологию по тематике переводов на русском и иностранных языках</li>
-                                        <li>переводить научную, техническую, общественно-политическую, экономическую и другую специальную литературу, патентные описания, нормативно-техническую и товаросопроводительную документацию, материалы переписки с зарубежными организациями, а также материалы конференций, совещаний, семинаров и т.п. </li>
-                                        <li>выполнять в установленные сроки устные и письменные, полные и сокращенные переводы, обеспечивая при этом точное соответствие переводов лексическому, стилистическому и смысловому содержанию оригиналов, соблюдение установленных требований в отношении используемых научных и технических терминов и определений</li>
+                                        <li>терминология по тематике переводов на русском и иностранных языках</li>
+                                        <li>перевод научной, технической, общественно-политической, экономической и другой специальной литературы, патентных описаний, нормативно-технической и товаросопроводительной документации, материалов переписки с зарубежными организациями, а также материалов конференций, совещаний, семинаров и т.п. </li>
+                                        <li>выполнение в установленные сроки устных и письменных, полных и сокращенных переводов с обеспечением при этом точного соответствия переводов лексическому, стилистическому и смысловому содержанию оригиналов, соблюдением установленных требований в отношении используемых научных и технических терминов и определений</li>
                                     </ul> <br><br>
                                 </h4>
                             </p>
@@ -162,7 +162,7 @@
                      </div>
                      <div class="row">  
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Чем полезно участие в программе/ обучение на курсе</h2>
+                            <h2 class="wow fadeInUp">Чем полезно участие в программе / обучение на курсе</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
 
