--- a/soft_czech.html
+++ b/soft_czech.html
@@ -152,7 +152,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс «Курс и практика чешского языка» разработан для студентов и слушателей ИжГТУ имени М.Т. Калашникова</h4>
+                                <h4>Учебный курс «Начальный курс и практика чешского языка» разработан для студентов и слушателей ИжГТУ имени М.Т. Калашникова</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
