--- a/soft_pedobr.html
+++ b/soft_pedobr.html
@@ -132,10 +132,10 @@
                                         <li>Основы управления роботом, сборка роботов из различных конструкторов и т.д.</li>
                                         <li>Микропроцессорная техника в мехатронике и робототехнике</li>
                                         <li>Программное обеспечение мехатронных и робототехнических систем</li>
-                                        <li>Теория автоматического управления, электротехника и др</li>
+                                        <li>Теория автоматического управления, электротехника и др.</li>
                                     </ul>
                                     <br>
-                                    В рамках курса будут рассмотрены существующие конструкторы и наборы для сборки робототехнических систем, в том числе необходимые для участия в соревнованиях регионального и федерального уровня, а также ключевые технологии для создания роботов собственной конструкции и реализации проектной деятельности в рамках средней школы, СПО и ДПО.
+                                    В рамках курса будут рассмотрены существующие конструкторы и наборы для сборки робототехнических систем, в том числе необходимые для участия в соревнованиях регионального и федерального уровней, а также ключевые технологии для создания роботов собственной конструкции и реализации проектной деятельности в рамках средней школы, СПО и ДПО.
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
