--- a/index.html
+++ b/index.html
@@ -230,13 +230,7 @@
                                                             </div>        
                                                             <div class="clearfix"></div>                                               
                                                          </div> 
-							  <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/tarasova.jpg" class="img-circle" alt=""></div>
-							<div class="sc-info">
-                                                            <h4><span>Тарасова Мария Андреевна</span><br>к.т.н., директор Института образовательных технологий ИжГТУ имени М. Т. Калашникова</h4>
-                                                            </div>        
-                                                            <div class="clearfix"></div>                                               
-                                                         </div> 
+							   
                                                          </div>
                                                 </div>
                                             </div>
@@ -518,6 +512,13 @@
                                                            <div class="schedule-item">
                                                             <div class="sc-info"><h3>Программа станции</h3></div>
                                                         </div>
+                                                        <div class="schedule-item">
+                                                            <div class="sc-info">
+                                                            <h3>Мастер-класс: экспресс-анализ питьевой воды</h3>
+                                                            </div>       
+                                                            <div class="clearfix"></div>
+                                                        </div>
+
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/varfolomeeva.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
