--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
 				
 			<div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/izhavia.png" alt="">                                    
+                                    <img width="60%" src="images/logo/izhavia.png" alt="">                                    
                                 </div>
                             </div>
 
