--- a/index.html
+++ b/index.html
@@ -183,17 +183,20 @@
                                                 <div class="col-md-12">
                                                     <div id="accordion" class="panel-group">
                                                     <div class="panel schedule-listing">
-                                                           <div class="schedule-item">
-                                                            <div class="sc-info"><h3>Приветственное слово</h3></div>
+
+                                                        <div class="schedule-item">
+                                                            <div class="text-center"><h3>Приветственное слово</h3></div>
                                                         </div>
-							<div class="schedule-item">
+
+							                             <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/gubert.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Губерт Александр Викторович</span><br>к.т.н., доцент, исполняющий обязанности ректора ИжГТУ имени М. Т. Калашникова</h4>
                                                             </div>        
                                                             <div class="clearfix"></div>                                               
                                                         </div>
-							    <div class="schedule-item">
+
+							                             <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/razumov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Разумов Дмитрий Александрович</span><br>директор филиала «Удмуртский» ПАО «Т Плюс»</h4>
@@ -215,7 +218,7 @@
                                                             </div>        
                                                             <div class="clearfix"></div>                                               
                                                          </div>
-							 <div class="schedule-item">
+							                             <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Соснин Сергей Владимирович</span><br>начальник авиационно-технической базы АО Ижавиа</h4>
@@ -1039,6 +1042,17 @@
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
+                                    <img src="images/team/gubert.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Губерт Александр Викторович</h3>
+                                <span class="subtitle2">к.т.н., доцент, исполняющий обязанности ректора ИжГТУ имени М. Т. Калашникова</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
                                     <img src="images/team/varfolomeeva.jpg" class="img-responsive" alt="">
                                 </figure>
 
@@ -1078,7 +1092,9 @@
                                 <h3>Абилов Альберт Винерович</h3>
                                 <span class="subtitle2">к.т.н., доцент, руководитель Научно-образовательного центра «Инфокоммуникационные технологии»</span>
                             </div>
-                        </div>                         
+                        </div>  
+
+                        <div class="clearfix"></div>                       
 
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1090,9 +1106,6 @@
                                 <span class="subtitle2">к.т.н., доцент, Кафедра «Теплоэнергетика»</span>
                             </div>
                         </div>
-
-
-                        <div class="clearfix"></div>
 
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1136,6 +1149,9 @@
                                 <span class="subtitle2">к.т.н., доцент, директор Института международных образовательных программ</span>
                             </div>
                         </div>
+
+                        <div class="clearfix"></div>
+
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
