--- a/cif_skills.html
+++ b/cif_skills.html
@@ -192,8 +192,8 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>К.э.н., доцент Перминова О.М. <br>
-                                ст. преподаватель Камалетдинов Д.С.
+                                <h4>Перминова О.М., к.э.н., доцент<br>
+                                Камалетдинов Д.С., ст. преподаватель
                             </h4>
                             </p>
                             <div class="spacer-single"></div>
