--- a/it_mob.html
+++ b/it_mob.html
@@ -181,7 +181,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>А.Н. Соловьева, к.т.н., доцент кафедры «Автоматизированные системы обработки информации и управления» ФГБОУ ВО «ИжГТУ имени М.Т. Калашникова»</h4>
+                                <h4>Соловьева А.Н., к.т.н., доцент кафедры «Автоматизированные системы обработки информации и управления» ФГБОУ ВО «ИжГТУ имени М.Т. Калашникова»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
