--- a/it_plis.html
+++ b/it_plis.html
@@ -173,7 +173,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Шишаков Константин Валентинович, д.т.н., доцент, заведующий кафедрой «Радиотехника»</h4>
+                                <h4>Шишаков К.В., д.т.н., доцент, заведующий кафедрой «Радиотехника»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
