--- a/it_progc.html
+++ b/it_progc.html
@@ -179,7 +179,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>В.Г.Тарасов, профессор кафедры программного обеспечения ИжГТУ имени М.Т.Калашникова</h4>
+                                <h4>Тарасов В.Г., профессор кафедры программного обеспечения ИжГТУ имени М.Т.Калашникова</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
