--- a/it_shemteh.html
+++ b/it_shemteh.html
@@ -175,7 +175,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>А. А. Винерович, к.т.н., доцент, руководитель Научно-образовательного центра «Инфокоммуникационные технологии»</h4>
+                                <h4>Абилов А.В. , к.т.н., доцент, руководитель Научно-образовательного центра «Инфокоммуникационные технологии»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
