--- a/it_skpr.html
+++ b/it_skpr.html
@@ -191,7 +191,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Глушков Владимир Александрович, зав. кафедрой «Конструирование радиоэлектронной аппаратуры», к.т.н., доцент</h4>
+                                <h4>Глушков В.А., к.т.н., доцент, зав. кафедрой «Конструирование радиоэлектронной аппаратуры»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
