--- a/it_web.html
+++ b/it_web.html
@@ -173,7 +173,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.т.н., доцент, заведующий кафедрой АСОИУ Мокроусов М.Н.</h4>
+                                <h4>Мокроусов М.Н., к.т.н., доцент, заведующий кафедрой АСОИУ</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
