--- a/soft_bu.html
+++ b/soft_bu.html
@@ -171,8 +171,8 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.э.н., доцент Слесаренко Галина Витальевна, практикующий консультант по вопросам налогов и налогообложения <br>
-                                старший преподаватель Харитонова Наталья Николаевна
+                                <h4>Слесаренко Г.В., к.э.н., доцент, практикующий консультант по вопросам налогов и налогообложения <br>
+                                Харитонова Н.Н., старший преподаватель
                             </h4>
                             </p>
                             <div class="spacer-single"></div>
