--- a/soft_cifdt.html
+++ b/soft_cifdt.html
@@ -180,7 +180,7 @@
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
                                 <h4>BFG Group<br>
-                                к.э.н., доцент Пушина Наталья Николаевна
+                                Пушина Н.Н., к.э.н., доцент
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
