--- a/soft_engit.html
+++ b/soft_engit.html
@@ -185,7 +185,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Архипова Елена Игоревна, канд.пед.наук, доцент, зав. кафедрой «Английский язык» </h4>
+                                <h4>Архипова Е. И., к.п.н, доцент, зав. кафедрой «Английский язык» </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
