--- a/soft_osnal.html
+++ b/soft_osnal.html
@@ -179,7 +179,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.э.н., доцент Слесаренко Галина Витальевна, практикующий консультант по вопросам налогов и налогообложения</h4>
+                                <h4>Слесаренко Г.В., к.э.н., доцент, практикующий консультант по вопросам налогов и налогообложения</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
