--- a/soft_pedobr.html
+++ b/soft_pedobr.html
@@ -188,8 +188,8 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.т.н., доцент кафедры «Мехатронные системы» Зубкова Ю.В. <br>
-                                к.ф.-м.н., доцент Караваев Ю.Л.</h4>
+                                <h4>Зубкова Ю.В., к.т.н., доцент кафедры «Мехатронные системы»<br>
+                                Караваев Ю.Л., к.ф.-м.н., доцент </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
