--- a/soft_socpr.html
+++ b/soft_socpr.html
@@ -188,7 +188,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Н.П. Устинова , канд. пед. наук, доцент кафедры «ИГППиТР»</h4>
+                                <h4>Устинова Н.П., к.п.н., доцент кафедры «ИГППиТР»</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
