--- a/cif_smm.html
+++ b/cif_smm.html
@@ -190,9 +190,9 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>К.э.н., доцент Перминова О.М. <br>
-                                    к.э.н., доцент Груздева Т.В. <br>
-                                ст. преподаватель Камалетдинов Д.С.
+                                <h4>Перминова О.М., к.э.н., доцент <br>
+                                    Груздева Т.В., к.э.н., доцент<br>
+                                Камалетдинов Д.С., ст. преподаватель
                             </h4>
                             </p>
                             <div class="spacer-single"></div>
