--- a/soft_engdel.html
+++ b/soft_engdel.html
@@ -185,9 +185,9 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>старший преподаватель кафедры «Английский язык» Булдакова Раиса Петровна<br>
-                                    старший преподаватель кафедры «Английский язык» Иванова Александра Леонидовна<br>
-                                старший преподаватель кафедры «Английский язык» Орлова Елена Владимировна
+                                <h4>Булдакова Раиса Петровна, старший преподаватель кафедры «Английский язык»<br>
+                                    Иванова Александра Леонидовна, старший преподаватель кафедры «Английский язык»<br>
+                                    Орлова Елена Владимировна, старший преподаватель кафедры «Английский язык»
                             </h4>
                             </p>
                             <div class="spacer-single"></div>
