--- a/soft_orgpd.html
+++ b/soft_orgpd.html
@@ -180,7 +180,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>к.э.н., доцент Пушина Наталья Николаевна</h4>
+                                <h4>Пушина Н. Н., к.э.н., доцент </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
