--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                                                         <div class="schedule-item bg_red">
                                                             <div class="sc-info">
-                                                            <h3>Мастер-класс по программированию движением робота</h3>
+                                                            <h3>Мастер-класс по программированию движения робота</h3>
                                                             </div>       
                                                             <div class="clearfix"></div>
                                                         </div>     
