--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                                     <div class="spacer-single"></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-calendar-o" color="white"></i>6 октября</span><span><i class="fa fa-map-marker" color="white"></i>"Интеграл", 2-й этаж</span></h3></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-clock-o" color="white"></i>Начало в 11:40 / 17:30</span></h3></div>
-                                   <!--  <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/UuPcM8eHurw" target="_blank">30 марта 2021г</a></span></h3></div> -->
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i><a href="https://vk.com/istukalashnikov" target="_blank">Трансляция в VK</a></span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i><a href="https://www.youtube.com/watch?v=qIdxXXyg0Qo" target="_blank">Трансляция в YouTube</a></span></h3></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
